# agentline

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  README_zh-CN.md  config.example.toml  flake.nix
.github/workflows/: ci.yml  release.yml
crates/agent/acp/: Cargo.toml
crates/agent/acp/examples/: acp_repl.rs
crates/agent/acp/src/: client_impl.rs  error.rs  lib.rs  mapping.rs  plugin.rs
crates/agent/claude-code/: Cargo.toml
crates/agent/claude-code/examples/: claude_code_repl.rs
crates/agent/claude-code/src/: config.rs  env_inject.rs  error.rs  lib.rs  plugin.rs
crates/agent/claude-code/tests/: agent_env.rs
crates/agent/codex/: Cargo.toml
crates/agent/codex/examples/: codex_repl.rs
crates/agent/codex/src/: config.rs  error.rs  lib.rs  mapping.rs  plugin.rs
crates/agent/gemini/: Cargo.toml
crates/agent/gemini/examples/: gemini_repl.rs
crates/agent/gemini/src/: config.rs  lib.rs  plugin.rs
crates/agent/hermes/: Cargo.toml
crates/agent/hermes/src/: config.rs  lib.rs  plugin.rs
crates/agent/kimi/: Cargo.toml
crates/agent/kimi/examples/: kimi_repl.rs
crates/agent/kimi/src/: config.rs  lib.rs  parser.rs  plugin.rs
crates/agent/kimi/tests/: spawn_integration.rs
crates/agent/kiro/: Cargo.toml
crates/agent/kiro/examples/: kiro_repl.rs
crates/agent/kiro/src/: config.rs  lib.rs  plugin.rs
crates/agent/opencode/: Cargo.toml
crates/agent/opencode/examples/: opencode_repl.rs
crates/agent/opencode/src/: config.rs  lib.rs  plugin.rs
crates/agent/qoder/: Cargo.toml
crates/agent/qoder/examples/: qoder_repl.rs
crates/agent/qoder/src/: config.rs  error.rs  lib.rs  plugin.rs
crates/bridge/: Cargo.toml
crates/bridge/locales/: en.yml  zh-CN.yml
crates/bridge/src/: acp_client.rs  acp_mapping.rs  acp_server.rs  agent.rs  bridge.rs  bridge_tests.rs  commands.rs  driver.rs  error.rs  event.rs  format.rs  im.rs  lib.rs  permission.rs  process.rs  proxy.rs  raw_log.rs  registry.rs  relay.rs  router.rs  scheduler.rs  session.rs  source.rs  state.rs  transport.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: agents.rs  config.rs  login.rs  main.rs  run.rs  service.rs  state.rs  web.rs
crates/cli/templates/: dashboard.html
crates/im/core/: Cargo.toml
crates/im/core/locales/: en.yml  zh-CN.yml
crates/im/core/src/: commands.rs  event.rs  handler.rs  lib.rs  parse.rs  render.rs  renderer.rs
crates/im/dingtalk/: Cargo.toml
crates/im/dingtalk/src/: auth.rs  error.rs  lib.rs  media.rs  send.rs  stream.rs  types.rs
crates/im/feishu/: Cargo.toml
crates/im/feishu/locales/: en.yml  zh-CN.yml
crates/im/feishu/src/: auth.rs  error.rs  lib.rs  media.rs  send.rs  types.rs  webhook.rs  ws.rs
crates/im/telegram/: Cargo.toml
crates/im/telegram/locales/: en.yml  zh-CN.yml
crates/im/telegram/src/: error.rs  lib.rs  media.rs  poll.rs  send.rs  types.rs
crates/im/wechat/: Cargo.toml
crates/im/wechat/locales/: en.yml  zh-CN.yml
crates/im/wechat/src/: auth.rs  error.rs  http.rs  lib.rs  markdown.rs  media.rs  poll.rs  send.rs  stream.rs  token.rs  types.rs
crates/permission/: Cargo.toml
crates/permission/src/: lib.rs  policy.rs  shell.rs  tool_kind.rs
crates/telegramify/: Cargo.toml
crates/telegramify/src/: lib.rs
crates/transport/core/: Cargo.toml
crates/transport/core/src/: auth.rs  files.rs  lib.rs  unix.rs
crates/transport/iroh/: Cargo.toml
crates/transport/iroh/src/: lib.rs
crates/tray/: Cargo.toml
crates/tray/assets/: AppIcon.icns
crates/tray/examples/: render_check.rs
crates/tray/src/: main.rs
docs/: setup-dingtalk.en.md  setup-dingtalk.md  setup-feishu.en.md  setup-feishu.md  setup-telegram.en.md  setup-telegram.md
scripts/: delete-crates.sh  install.ps1  install.sh  installer.iss  publish-crates.sh  yank-crates.sh
web/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
web/dashboard/src/: App.vue  api.ts  main.ts  types.ts
web/dashboard/src/composables/: useRestart.ts  useStatus.ts  useToast.ts
web/dashboard/src/i18n/: en.ts  index.ts  zh-CN.ts
web/dashboard/src/views/: AgentView.vue  ChannelsView.vue  LogsView.vue  OverviewView.vue  ProjectsView.vue  SettingsView.vue
