[workspace]
resolver = "2"
members = [
    "crates/bridge",
    "crates/cli",
    "crates/im/core",
    "crates/im/wechat",
    "crates/im/dingtalk",
    "crates/im/feishu",
    "crates/im/telegram",
    "crates/agent/acp",
    "crates/agent/claude-code",
    "crates/agent/codex",
    "crates/agent/kimi",
    "crates/agent/qoder",
    "crates/agent/opencode",
    "crates/agent/kiro",
    "crates/agent/gemini",
    "crates/agent/hermes",
    "crates/tray",
    "crates/transport/core",
    "crates/transport/iroh",
    "crates/telegramify",
    "crates/permission",
]

[workspace.package]
version = "1.0.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/seven-tt/agentline"
homepage = "https://github.com/seven-tt/agentline"
authors = ["seven"]
keywords = ["chatops", "claude-code", "codex", "hermes", "telegram"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.89"
readme = "README.md"

[workspace.dependencies]
# core async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tracing
# release_max_level_info: in release builds, debug!/trace! (incl. the raw
# `acp::raw` ACP I/O logs) are compiled out entirely → zero overhead in the
# packaged app. Dev/debug builds keep full trace for debugging.
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
time = { version = "0.3", features = ["macros", "local-offset", "formatting"] }

# errors
anyhow = "1"
thiserror = "1"

# fs paths
directories = "5"

# im-wechat
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
aes = "0.8"
ecb = "0.1"
cipher = "0.4"
base64 = "0.22"
rand = "0.8"
qrcode = "0.14"

# im-telegram markdown
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
telegramify-markdown = { path = "crates/telegramify", version = "1.0.2" }

# im-dingtalk
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"

# agent-acp (pinned to 0.10 — same as the proven acp-cli reference impl;
# 0.13's closure-based API removed the direct ClientSideConnection that we want
# in order to control child spawning and env vars).
agent-client-protocol = "0.10"
tokio-util = { version = "0.7", features = ["compat"] }
dirs = "5"

# agent-codex (Codex has its own JSON-RPC "app-server" protocol; this SDK
# spawns `codex app-server` as a subprocess and gives us a typed Rust client).
codex-app-server-sdk = "0.5"

# i18n
rust-i18n = "3"

# cli
clap = { version = "4", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
toml = "0.8"
toml_edit = "0.22"
tempfile = "3"

# embedded web dashboard
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
which = "7"

# desktop tray (macOS / Windows / Linux menu-bar icon)
tray-icon = "0.24"
tao = "0.35"

# cross-platform process management (Windows only — macOS/Linux use libc)
sysinfo = { version = "0.38", default-features = false, features = ["system"] }

# internal
agentline-bridge = { path = "crates/bridge", version = "1.0.2" }
agentline-im-core = { path = "crates/im/core", version = "1.0.2" }
agentline-im-wechat = { path = "crates/im/wechat", version = "1.0.2" }
agentline-im-dingtalk = { path = "crates/im/dingtalk", version = "1.0.2" }
agentline-im-feishu = { path = "crates/im/feishu", version = "1.0.2" }
agentline-im-telegram = { path = "crates/im/telegram", version = "1.0.2" }
agentline-agent-acp = { path = "crates/agent/acp", version = "1.0.2" }
agentline-agent-claude-code = { path = "crates/agent/claude-code", version = "1.0.2" }
agentline-agent-codex = { path = "crates/agent/codex", version = "1.0.2" }
agentline-agent-kimi = { path = "crates/agent/kimi", version = "1.0.2" }
agentline-agent-qoder = { path = "crates/agent/qoder", version = "1.0.2" }
agentline-agent-opencode = { path = "crates/agent/opencode", version = "1.0.2" }
agentline-agent-kiro = { path = "crates/agent/kiro", version = "1.0.2" }
agentline-agent-gemini = { path = "crates/agent/gemini", version = "1.0.2" }
agentline-agent-hermes = { path = "crates/agent/hermes", version = "1.0.2" }
agentline-permission = { path = "crates/permission", version = "1.0.2" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
