[package]
name = "agentline-bridge"
description = "Neutral trait + Bridge runtime for the agentline IM ↔ coding-agent bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
rust-i18n = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true }
