[package]
name = "agentline-bridge"
description = "Neutral trait + Bridge runtime for the agentline IM ↔ coding-agent bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
which = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
agent-client-protocol = { workspace = true, features = ["unstable_elicitation", "unstable_session_close"] }
agentline-permission = { workspace = true }
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
sysinfo = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
