[package]
name = "agentline-permission"
description = "Session-level permission policy for agentline shell/tool grants"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
