[package]
name = "telegramify-markdown"
description = "Convert standard Markdown to Telegram MarkdownV2 format"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
pulldown-cmark = { workspace = true }
