[package]
name = "agentline-agent-acp"
description = "Generic ACP (Agent Client Protocol) transport for agentline — drive any ACP-speaking coding agent over stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
agentline-bridge = { workspace = true }

agent-client-protocol = { workspace = true, features = ["unstable_elicitation", "unstable_session_close"] }
tokio-util = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
