[package]
name = "agentline-im-core"
description = "Shared IM abstraction layer: traits, default renderer, and re-exports for agentline IM adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
agent-client-protocol = { workspace = true }
agentline-bridge = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
rust-i18n = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
