[package]
name = "agentline-im-telegram"
description = "Telegram Bot API long-polling adapter for agentline"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
agentline-im-core = { workspace = true }

async-trait = { workspace = true }
rust-i18n = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
telegramify-markdown = { workspace = true }
