[package]
name = "agentline-im-wechat"
description = "Tencent iLink (personal WeChat Bot) adapter for agentline"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
agentline-im-core = { workspace = true }

async-trait = { workspace = true }
rust-i18n = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

base64 = { workspace = true }
rand = { workspace = true }
aes = "0.8"
cipher = "0.4"
hex = "0.4"
ulid = "1.1"
dirs = "5"
bytes = "1"
