[package]
name = "agentline-transport-iroh"
description = "iroh P2P transport for agentline ACP connections"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
agentline-bridge = { path = "../../bridge", version = "1.0.2" }
agentline-transport = { path = "../core", version = "1.0.2" }
iroh = "1"
hex = "0.4"
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
